--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -40,6 +40,8 @@
                         .javahamburgermenu {
                             display: none;
                         }
+
+                        .steppen, .divformbuttons{display:none;}
                     </style>
                 </noscript>
                 <li class="profilenav"><a href="/"><img src="/images/profile.png"></a></li>
