--- a/views/oude buckettest kopie.hbs
+++ b/views/oude buckettest kopie.hbs
@@ -3,13 +3,9 @@
             <h1>The Bucktest</h1>
             <h2>Wat heeft jouw voorkeur?</h2>
         </div>
-        <form class="buckettest" id="regForm" method="post"> 
-
-
-
-
-<div class="tab tab1 tabnojs">
-  <div class="omgeving">
+        <form class="buckettest" method="post">
+           
+            <div class="omgeving">
 
                 <h4>Omgeving</h4>
                 <div class="formcontainer">
@@ -25,11 +21,9 @@
                     </div>
                     </div>
                 </div>
-            </div>
-</div>
-
-<div class="tab tab2 tabnojs">
- <div class="liever">
+            </div> 
+           
+            <div class="liever">
 
 
                 <h4>Wat doe je liever</h4>
@@ -48,9 +42,7 @@
                     </div>
                 </div>
             </div>
-</div>
-
-<div class="tab tab3 tabnojs">
+           
   <div class="omgeving">
 
                 <h4>Eerste date</h4>
@@ -63,32 +55,17 @@
                         <label class="labelwinter" for="karaoke2"><img class="winterimg2" src="images/karaoke.jpg"></label>
                         <input type="radio" name="date" value="9" id="surfen3" hidden>
                         <label for="surfen3"><img src="images/surfen.jpg"></label>
-                    <div class="divsubmit">         
-           
-        </div>
+                   
                     </div>
                     </div>
                 </div>
             </div>
-</div>
-
-
-
-<div>
-  <div class="divformbuttons">
-    <button class="formbuttons" type="button" id="prevBtn" onclick="nextPrev(-1)">Vorige</button>
-    <button class="formbuttons" type="button" id="nextBtn" onclick="nextPrev(1)">Volgende</button>
- </div>
-  <noscript>   <input id="submitbutton" type="submit" value="Verstuur"></noscript>
-</div>
-
-<!-- Circles which indicates the steps of the form: -->
-<div class="steppen" >
-  <span class="step"></span>
-  <span class="step"></span>
-  <span class="step"></span>
-</div>
-
-</form>
-<script src="/javascripts/buckettest.js"></script>
+            <br>
+  <div class="divsubmit">         
+            <input id="submitbutton" type="submit" value="Verstuur">
+        </div>
+       
+   
+        </form>
+      
     </main>
