--- a/views/register.hbs
+++ b/views/register.hbs
@@ -37,7 +37,7 @@
             <label for="iwant">Wat wil je nog eens gedaan hebben in je leven</label><br>
             <input class="formcenter"  type="text" id="iwant" name="iwant">
         </div>
-        <button type="submit">Sign up</button>
+        <button type="submit">Registreer</button>
     </form>
 {{/if}}
  {{!-- end status validatoin --}}
