--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -494,3 +494,8 @@ h1 {
   .steppen{
       text-align:center;
       margin-top:40px;}
+
+      .uploadphoto{
+          background-color:#5dba3c;
+          color:white;
+      }
