--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,7 +14,7 @@
         <form  enctype="multipart/form-data" method="POST" >
         <label for="photo"><img id="profilepic" src="images/profile/{{user.profilePicUrl}}"></label>
         <input type="file" name="photo" id="photo" onchange="form.submit()" hidden><br>
-       <noscript> <input type="submit" value="Upload jouw gekozen foto" ></noscript>
+       <noscript> <input class="uploadphoto" type="submit" value="Upload jouw gekozen foto" ></noscript>
         </form>
       </div>
       <div class="profielinfo">
