--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,5 +1,5 @@
 {{!-- satus validation --}}
-
+<main class="loginmain">
 <h1>Login</h1>
 {{# if errors }}
         <section class="errors">
@@ -24,3 +24,4 @@
 <div class="newregisterdiv">
 <a class="newregister" href="/register"><button>Nieuw? Registreer hier</button></a>
 </div>
+</main>
