--- a/views/register.hbs
+++ b/views/register.hbs
@@ -20,7 +20,7 @@
     <img class="iconbucket" src="/images/iconbuckettest.png">
         <div class="input">
             <label for="email">E-Mail</label><br>
-            <input class="formcenter" type="text" id="email" name="email" >
+            <input class="formcenter" type="email" id="email" name="email" >
         </div>
               <div class="input">
             <label for="name">Name</label><br>
