changed login email not uppercase

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -10,7 +10,7 @@
     <img class="iconbucket" src="/images/iconbuckettest.png">
     <div class="input">
         <label for="email">E-Mail</label>
-        <input class="formcenter"  type="text" id="email" name="email">
+        <input class="formcenter"  type="email" id="email" name="email">
     </div>
 
     <div class="input">
